# agent-kit

./: .agent-kitrc.json  .attw.json  .envrc  .gitignore  .mcp.json  .npmrc  .oxfmtrc.json  .secretlintrc.json  .strykerignore  .webpressorc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  THIRD-PARTY-NOTICES.md  TODOS.md  VISION.md  codex.mcp.json  compatible-versions.json  opencode.json  oxlint.config.ts  oxlint.json  package-boundaries.js  package-surface.json  package.contract.integration.test.ts  package.contract.test.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.mjs  stryker.config.ts  tsconfig.json  tsconfig.test.json  vitest.bench.config.ts  vitest.config.ts  vitest.stryker.config.ts
.changeset/: absorb-tooling-and-workers-test-kit.md  add-ak-bin.md  add-fresh-repo-quality-bootstrap.md  agent-config-publish-unblock.md  agent-config-release-surface-fix.md  agent-core-dry-wave-a.md  agent-kit-global-self-update.md  agent-kit-hard-cut-generic-core.md  agent-vitest-source-condition.md  ai-reliability-and-qa-hardening.md  ai-subpaths-extraction.md  ai-tools-wave2.md  ak-worktree-command.md  architecture-drift-audit.md  audit-codex-wrapped-hooks.md  audit-governance-subcommands.md  audit-no-link-protocol.md  audit-skip-stryker-tmp.md  audit-skip-template.md  audit-supported-agent-clis.md  audit-tsconfig-parent-paths.md  auto-update-fetch-timeout.md  auto-update-gh-releases.md  base-kit-bootstrap-only.md  base-kit-pnpm-exec-not-npx.md  binary-contract-cleanup.md  binary-first-wp-phase2-runtime-lane.md  blueprint-audit-contract-drift.md  blueprint-lifecycle-ephemeral-audit.md  blueprint-migration-assets.md  blueprint-planning-artifacts.md  (+172 more)
native/session-memory-engine/: .gitignore  Cargo.toml  deny.toml
native/session-memory-engine/.cargo/: mutants.toml
native/session-memory-engine/.github/workflows/: bench.yml  check.yml  mutation.yml
native/session-memory-engine/crates/session-memory-core/: Cargo.toml
native/session-memory-engine/crates/session-memory-core/benches/: hot_path.rs
native/session-memory-engine/crates/session-memory-core/src/: chunk.rs  execute.rs  lib.rs  search.rs  session.rs  store.rs
native/session-memory-engine/crates/session-memory-core/tests/: execute_test.rs  session_test.rs  store_test.rs
native/session-memory-engine/crates/session-memory-napi/: Cargo.toml
native/session-memory-engine/crates/session-memory-napi/src/: lib.rs  types.rs
native/session-memory-engine/scripts/: check-bench-thresholds.sh  check-mutation-score.sh
(+2415 files in other folders)
