[package]
name = "session-memory-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure Rust SQLite+FTS5 session-memory engine for agent-kit (native session-memory engine core, no napi dependency)"

[dependencies]
rusqlite = { workspace = true }
text-splitter = { workspace = true }
htmd = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "hot_path"
harness = false
