[package]
name = "session-memory-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "napi-rs FFI bindings for session-memory-core — exposes sync/async Node.js API"

[lib]
crate-type = ["cdylib"]

[dependencies]
session-memory-core = { path = "../session-memory-core" }
napi = { workspace = true }
napi-derive = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
napi-build = "2"
